--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
 # command to install dependencies
 install:
-#  - pip install -r requirements
+  - pip install -r requirements
   - pip install flake8
 
 # command to run before the tests
