--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,17 @@ python:
 #  - "3.4"
 #  - "3.5"
 
+# Setup anaconda
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+
 # command to install dependencies
 install:
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib nose
   - pip install -r requirements
   - pip install flake8
 
