Removed nosetests due to Essentia installation issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ python:
 #  - "3.5"
 
 # Setup anaconda
-before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda2/bin:$PATH
-  - conda update --yes conda
+#before_install:
+#  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+#  - chmod +x miniconda.sh
+#  - ./miniconda.sh -b
+#  - export PATH=/home/travis/miniconda2/bin:$PATH
+#  - conda update --yes conda
 
 # command to install dependencies
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib nose
-  - pip install -r requirements
+#  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib nose
+#  - pip install -r requirements
   - pip install flake8
 
 # command to run before the tests
@@ -26,5 +26,5 @@ before_script:
 
 # command to run tests
 script:
-  - nosetests unittests
-#  - nosetests --with-coverage
+#  - nosetests unittests
+  - nosetests --with-coverage
